# Platformer

./: CMakeLists.txt  README.md
Media/Entities/: AlliedBullet.xml  Archer.xml  EnemyBullet.xml  ExplodedBullet.xml  Raven.xml  Runner.xml  Stitch.xml  Transporter.xml
Media/InputLayout/: InputLayout.xml
Media/Levels/: Level_1.tmx  Level_2.tmx  Level_3.tmx
include/: animatedEntity.h  animation.h  animationManager.h  animationParser.h  animationType.h  application.h  archer.h  bullet.h  button.h  buttonView.h  componentDefinition.h  core.h  entity.h  gameOverState.h  gameState.h  inputManager.h  intermediateState.h  introState.h  label.h  levelParser.h  menuState.h  musicPlayer.h  objectType.h  pauseState.h  physicalBody.h  physicalWorld.h  platform.h  player.h  resourceManager.h  runner.h  settingsState.h  shooter.h  soundPlayer.h  stateBase.h  stateManager.h  stateType.h  textureType.h  tileMap.h  userData.h  utils.h  (+1 more)
src/: animatedEntity.cpp  animation.cpp  animationManager.cpp  animationParser.cpp  application.cpp  archer.cpp  bullet.cpp  button.cpp  buttonView.cpp  componentDefinition.cpp  entity.cpp  gameOverState.cpp  gameState.cpp  inputManager.cpp  intermediateState.cpp  introState.cpp  label.cpp  levelParser.cpp  menuState.cpp  musicPlayer.cpp  pauseState.cpp  physicalBody.cpp  physicalWorld.cpp  platform.cpp  player.cpp  resourceManager.cpp  runner.cpp  settingsState.cpp  shooter.cpp  soundPlayer.cpp  stateBase.cpp  stateManager.cpp  tileMap.cpp  userData.cpp  utils.cpp  world.cpp
